# ChangeLog for media-libs/taglib
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/taglib/ChangeLog,v 1.7 2004/02/15 16:50:27 weeve Exp $

  15 Feb 2004; Jason Wever <weeve@gentoo.org> taglib-1.0_beta2.ebuild:
  Marked stable on sparc.

  10 Feb 2004; Lars Weiler <pylon@gentoo.org> taglib-1.0_beta2.ebuild:
  Stable on ppc

  05 Feb 2004; Luca Barbato <lu_zero@gentoo.org> taglib-1.0_beta2.ebuild:
  Marked ~ppc

  04 Jan 2004; Jason Wever <weeve@gentoo.org> taglib-1.0_beta2.ebuild:
  Added ~sparc keyword.

  17 Dec 2003; Caleb Tennis <caleb@gentoo.org> taglib-1.0_beta2.ebuild:
  Removing dependency on kde as it's not needed
  See bug #35874 for more details

  10 Dec 2003; Caleb Tennis <caleb@gentoo.org> taglib-1.0_beta2.ebuild:
  Try cleaning the autom4te cache a different way

*taglib-1.0_beta2 (09 Dec 2003)

  09 Dec 2003; Caleb Tennis <caleb@gentoo.org> metadata.xml, taglib-1.0_beta2.ebuild:
  Initial import
