@@ -1,4 +1,6 @@
+MD5 17623301762d51a335981e38af6536a3 taglib-1.0.ebuild 877
+MD5 a11311856bb2f60643cf17e0cb4d47b1 taglib-1.0_beta2.ebuild 898
 MD5 7a154ae54ad01ea57bca0da343f7039d ChangeLog 1001
 MD5 14889ab75f97d76e58b0c1154e7683a9 metadata.xml 161
-MD5 7460a7e1eb9dd2a78f81c04abd8e156c taglib-1.0_beta2.ebuild 828
+MD5 e5d3c1a247ce1f6d9f56f6bdc2fe5bb4 files/digest-taglib-1.0 62
 MD5 635c782c32b6f8531ccbca213e6397d7 files/digest-taglib-1.0_beta2 63
